# cimgui-sokol-starterkit

./: .gitignore  CMakeLists.txt  README.md  demo.c  demo.cc  demo.js  demo.wasm  index.html  install_emsdk.sh  update_deps.sh
app/: App.cpp  App.h  CMakeLists.txt
cimgui/: cimgui.cpp  cimgui.h  cimgui_all.h  cimgui_internal.cpp  cimgui_internal.h  zimgui.cpp  zimgui.h
sokol/: sokol.c  sokol.cc  sokol.m
